--- a/src/log-store/Cargo.toml
+++ b/src/log-store/Cargo.toml
@@ -40,6 +40,7 @@ tokio.workspace = true
 [dev-dependencies]
 common-meta = { workspace = true, features = ["testing"] }
 common-test-util.workspace = true
+common-wal = { workspace = true, features = ["testing"] }
 itertools.workspace = true
 rand.workspace = true
 rand_distr = "0.4"
