--- a/config/datanode.example.toml
+++ b/config/datanode.example.toml
@@ -366,17 +366,20 @@ intermediate_path = ""
 
 [region_engine.mito.memtable]
 ## Memtable type.
-## - `partition_tree`: partition tree memtable
-## - `time_series`: time-series memtable (deprecated)
-type = "partition_tree"
+## - `time_series`: time-series memtable
+## - `partition_tree`: partition tree memtable (experimental)
+type = "time_series"
 
 ## The max number of keys in one shard.
+## Only available for `partition_tree` memtable.
 index_max_keys_per_shard = 8192
 
 ## The max rows of data inside the actively writing buffer in one shard.
+## Only available for `partition_tree` memtable.
 data_freeze_threshold = 32768
 
 ## Max dictionary bytes.
+## Only available for `partition_tree` memtable.
 fork_dictionary_bytes = "1GiB"
 
 ## The logging options.
