--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -100,8 +100,8 @@ tokio-rustls = "0.25"
 tokio-stream = { workspace = true, features = ["net"] }
 tonic.workspace = true
 tonic-reflection = "0.10"
-tower = { version = "0.4", features = ["full"] }
-tower-http = { version = "0.4", features = ["full"] }
+tower = { workspace = true, features = ["full"] }
+tower-http = { version = "0.5", features = ["full"] }
 urlencoding = "2.1"
 zstd.workspace = true
 
