--- a/tests-integration/Cargo.toml
+++ b/tests-integration/Cargo.toml
@@ -66,7 +66,7 @@ tempfile.workspace = true
 time = "0.3"
 tokio.workspace = true
 tonic.workspace = true
-tower = "0.4"
+tower.workspace = true
 uuid.workspace = true
 zstd.workspace = true
 
