--- a/Cargo.toml
+++ b/Cargo.toml
@@ -155,6 +155,7 @@ tokio-stream = { version = "0.1" }
 tokio-util = { version = "0.7", features = ["io-util", "compat"] }
 toml = "0.8.8"
 tonic = { version = "0.10", features = ["tls"] }
+tower = "0.4"
 uuid = { version = "1", features = ["serde", "v4", "fast-rng"] }
 zstd = "0.13"
 
