--- a/src/meta-client/Cargo.toml
+++ b/src/meta-client/Cargo.toml
@@ -27,6 +27,6 @@ tonic.workspace = true
 datatypes.workspace = true
 futures = "0.3"
 meta-srv = { workspace = true, features = ["mock"] }
-tower = "0.4"
+tower.workspace = true
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
