--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -73,6 +73,7 @@ common-test-util.workspace = true
 criterion = "0.4"
 log-store.workspace = true
 object-store = { workspace = true, features = ["services-memory"] }
+rskafka.workspace = true
 toml.workspace = true
 
 [[bench]]
