refactor: merge RegionHandleResult into RegionHandleResponse
Signed-off-by: tison <wander4096@gmail.com>

--- a/src/file-engine/Cargo.toml
+++ b/src/file-engine/Cargo.toml
@@ -12,7 +12,7 @@ test = ["common-test-util"]
 workspace = true
 
 [dependencies]
-api = { workspace = true, optional = true }
+api.workspace = true
 async-trait = "0.1"
 common-catalog.workspace = true
 common-datasource.workspace = true
