Update RustPython to 0.3.1

--- a/src/script/Cargo.toml
+++ b/src/script/Cargo.toml
@@ -13,10 +13,7 @@ python = [
     "dep:datafusion-expr",
     "dep:datafusion-physical-expr",
     "dep:rustpython-vm",
-    "dep:rustpython-parser",
     "dep:rustpython-compiler",
-    "dep:rustpython-compiler-core",
-    "dep:rustpython-codegen",
     "dep:rustpython-pylib",
     "dep:rustpython-stdlib",
     "dep:paste",
@@ -55,18 +52,13 @@ prometheus.workspace = true
 query.workspace = true
 # TODO(discord9): This is a forked and tweaked version of RustPython, please update it to newest original RustPython After RustPython support GC
 pyo3 = { version = "0.19", optional = true, features = ["abi3", "abi3-py37"] }
-rustpython-codegen = { git = "https://github.com/discord9/RustPython", optional = true, rev = "9ed5137412" }
-rustpython-compiler = { git = "https://github.com/discord9/RustPython", optional = true, rev = "9ed5137412" }
-rustpython-compiler-core = { git = "https://github.com/discord9/RustPython", optional = true, rev = "9ed5137412" }
-rustpython-parser = { git = "https://github.com/discord9/RustPython", optional = true, rev = "9ed5137412" }
-rustpython-pylib = { git = "https://github.com/discord9/RustPython", optional = true, rev = "9ed5137412", features = [
-    "freeze-stdlib",
-] }
-rustpython-stdlib = { git = "https://github.com/discord9/RustPython", optional = true, rev = "9ed5137412" }
-rustpython-vm = { git = "https://github.com/discord9/RustPython", optional = true, rev = "9ed5137412", features = [
+rustpython-compiler = { version = "0.3.1", optional = true }
+rustpython-pylib = { version = "0.3.1", optional = true, features=["freeze-stdlib"] }
+rustpython-stdlib = { version = "0.3.1", optional = true }
+rustpython-vm = { version = "0.3.1", features = [
     "default",
     "codegen",
-] }
+], optional = true }
 servers.workspace = true
 session.workspace = true
 snafu.workspace = true
