--- a/src/operator/Cargo.toml
+++ b/src/operator/Cargo.toml
@@ -53,6 +53,7 @@ snafu.workspace = true
 sql.workspace = true
 sqlparser.workspace = true
 store-api.workspace = true
+substrait.workspace = true
 table.workspace = true
 tokio.workspace = true
 tonic.workspace = true
