--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -19,6 +19,7 @@ datatypes.workspace = true
 enum_dispatch = "0.3"
 # This fork is simply for keeping our dependency in our org, and pin the version
 # it is the same with upstream repo
+common-meta.workspace = true
 datafusion-common.workspace = true
 datafusion-expr.workspace = true
 hydroflow = { git = "https://github.com/GreptimeTeam/hydroflow.git", rev = "ba2df44efd42b7c4d37ebefbf82e77c6f1d4cb94" }
