--- a/src/index/Cargo.toml
+++ b/src/index/Cargo.toml
@@ -22,13 +22,13 @@ greptime-proto.workspace = true
 mockall.workspace = true
 pin-project.workspace = true
 prost.workspace = true
-regex.workspace = true
 regex-automata.workspace = true
+regex.workspace = true
 snafu.workspace = true
-tantivy = "0.22"
+tantivy = { version = "0.22", features = ["zstd-compression"] }
 
 [dev-dependencies]
 rand.workspace = true
 tempfile.workspace = true
-tokio.workspace = true
 tokio-util.workspace = true
+tokio.workspace = true
