--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,7 @@ clippy.print_stderr = "warn"
 clippy.implicit_clone = "warn"
 clippy.readonly_write_lock = "allow"
 rust.unknown_lints = "deny"
+rust.non_local_definitions = "allow"
 
 [workspace.dependencies]
 # We turn off default-features for some dependencies here so the workspaces which inherit them can
