--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,7 @@ clippy.print_stderr = "warn"
 clippy.implicit_clone = "warn"
 clippy.readonly_write_lock = "allow"
 rust.unknown_lints = "deny"
+# Remove this after https://github.com/PyO3/pyo3/issues/4094
 rust.non_local_definitions = "allow"
 
 [workspace.dependencies]
