--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -210,14 +210,14 @@ jobs:
             artifacts-dir-prefix: greptime-darwin-arm64
           - os: ${{ needs.allocate-runners.outputs.macos-runner }}
             arch: aarch64-apple-darwin
-            features: pyo3_backend,servers/dashboard
+            features: servers/dashboard
             artifacts-dir-prefix: greptime-darwin-arm64-pyo3
           - os: ${{ needs.allocate-runners.outputs.macos-runner }}
             features: servers/dashboard
             arch: x86_64-apple-darwin
             artifacts-dir-prefix: greptime-darwin-amd64
           - os: ${{ needs.allocate-runners.outputs.macos-runner }}
-            features: pyo3_backend,servers/dashboard
+            features: servers/dashboard
             arch: x86_64-apple-darwin
             artifacts-dir-prefix: greptime-darwin-amd64-pyo3
     runs-on: ${{ matrix.os }}
@@ -259,7 +259,7 @@ jobs:
             artifacts-dir-prefix: greptime-windows-amd64
           - os: ${{ needs.allocate-runners.outputs.windows-runner }}
             arch: x86_64-pc-windows-msvc
-            features: pyo3_backend,servers/dashboard
+            features: servers/dashboard
             artifacts-dir-prefix: greptime-windows-amd64-pyo3
     runs-on: ${{ matrix.os }}
     outputs:
