--- a/src/frontend/Cargo.toml
+++ b/src/frontend/Cargo.toml
@@ -44,7 +44,7 @@ prometheus.workspace = true
 prost.workspace = true
 query.workspace = true
 raft-engine.workspace = true
-script = { workspace = true, features = ["python"], optional = true }
+script = { workspace = true, optional = true }
 serde.workspace = true
 servers.workspace = true
 session.workspace = true
