--- a/src/script/Cargo.toml
+++ b/src/script/Cargo.toml
@@ -4,32 +4,13 @@ edition.workspace = true
 version.workspace = true
 license.workspace = true
 
-[features]
-default = ["python"]
-pyo3_backend = ["dep:pyo3", "arrow/pyarrow"]
-python = [
-    "dep:datafusion",
-    "dep:datafusion-common",
-    "dep:datafusion-expr",
-    "dep:datafusion-functions",
-    "dep:datafusion-physical-expr",
-    "dep:rustpython-vm",
-    "dep:rustpython-parser",
-    "dep:rustpython-compiler",
-    "dep:rustpython-compiler-core",
-    "dep:rustpython-codegen",
-    "dep:rustpython-pylib",
-    "dep:rustpython-stdlib",
-    "dep:paste",
-]
-
 [lints]
 workspace = true
 
 [dependencies]
 api.workspace = true
 arc-swap = "1.0"
-arrow.workspace = true
+arrow = { workspace = true, features = ["pyarrow"] }
 async-trait.workspace = true
 catalog.workspace = true
 common-catalog.workspace = true
@@ -43,32 +24,20 @@ common-telemetry.workspace = true
 common-time.workspace = true
 console = "0.15"
 crossbeam-utils = "0.8.14"
-datafusion = { workspace = true, optional = true }
-datafusion-common = { workspace = true, optional = true }
-datafusion-expr = { workspace = true, optional = true }
-datafusion-functions = { workspace = true, optional = true }
-datafusion-physical-expr = { workspace = true, optional = true }
+datafusion.workspace = true
+datafusion-common.workspace = true
+datafusion-expr.workspace = true
+datafusion-functions.workspace = true
+datafusion-physical-expr.workspace = true
 datatypes.workspace = true
 futures.workspace = true
 lazy_static.workspace = true
 once_cell.workspace = true
-paste = { workspace = true, optional = true }
+paste.workspace = true
 prometheus.workspace = true
 query.workspace = true
-# TODO(discord9): This is a forked and tweaked version of RustPython, please update it to newest original RustPython After RustPython support GC
-pyo3 = { version = "0.20", optional = true, features = ["abi3", "abi3-py37"] }
-rustpython-codegen = { git = "https://github.com/discord9/RustPython", optional = true, rev = "9ed5137412" }
-rustpython-compiler = { git = "https://github.com/discord9/RustPython", optional = true, rev = "9ed5137412" }
-rustpython-compiler-core = { git = "https://github.com/discord9/RustPython", optional = true, rev = "9ed5137412" }
-rustpython-parser = { git = "https://github.com/discord9/RustPython", optional = true, rev = "9ed5137412" }
-rustpython-pylib = { git = "https://github.com/discord9/RustPython", optional = true, rev = "9ed5137412", features = [
-    "freeze-stdlib",
-] }
-rustpython-stdlib = { git = "https://github.com/discord9/RustPython", optional = true, rev = "9ed5137412" }
-rustpython-vm = { git = "https://github.com/discord9/RustPython", optional = true, rev = "9ed5137412", features = [
-    "default",
-    "codegen",
-] }
+pyo3 = { version = "0.20", features = ["abi3", "abi3-py37"] }
+rustpython-compiler = "0.3"
 servers.workspace = true
 session.workspace = true
 snafu.workspace = true
