--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -120,7 +120,7 @@ mysql_async = { version = "0.33", default-features = false, features = [
 ] }
 permutation = "0.4"
 rand.workspace = true
-script = { workspace = true, features = ["python"] }
+script = { workspace = true }
 serde_json.workspace = true
 session = { workspace = true, features = ["testing"] }
 table.workspace = true
