feat: match dummy provider in the order hint

--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -436,7 +436,8 @@ dir = "/tmp/greptimedb/logs"
 
 ## The log level. Can be `info`/`debug`/`warn`/`error`.
 ## +toml2docs:none-default
-level = "info"
+level = "debug"
+# level = "info"
 
 ## Enable OTLP tracing.
 enable_otlp_tracing = false
