--- a/src/script/Cargo.toml
+++ b/src/script/Cargo.toml
@@ -36,6 +36,7 @@ common-catalog.workspace = true
 common-error.workspace = true
 common-function.workspace = true
 common-macro.workspace = true
+common-meta.workspace = true
 common-query.workspace = true
 common-recordbatch.workspace = true
 common-runtime.workspace = true
