--- a/tests/runner/Cargo.toml
+++ b/tests/runner/Cargo.toml
@@ -18,5 +18,6 @@ common-time.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 sqlness = { version = "0.5" }
+tempfile.workspace = true
 tinytemplate = "1.2"
 tokio.workspace = true
