--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -36,6 +36,7 @@ common-telemetry = { workspace = true, features = [
     "deadlock_detection",
 ] }
 common-time.workspace = true
+common-version.workspace = true
 common-wal.workspace = true
 config = "0.13"
 datanode.workspace = true
