feat: implement unstable_fuzz_create_table_standalone

--- a/tests-fuzz/Cargo.toml
+++ b/tests-fuzz/Cargo.toml
@@ -24,9 +24,11 @@ derive_builder = { workspace = true }
 dotenv = "0.15"
 lazy_static = { workspace = true }
 libfuzzer-sys = "0.4"
+nix = { version = "0.28", features = ["process", "signal"] }
 partition = { workspace = true }
 rand = { workspace = true }
 rand_chacha = "0.3.1"
+reqwest = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 snafu = { workspace = true }
@@ -38,10 +40,11 @@ sqlx = { version = "0.6", features = [
     "postgres",
     "chrono",
 ] }
+tinytemplate = "1.2"
+tokio = { workspace = true }
 
 [dev-dependencies]
 dotenv.workspace = true
-tokio = { workspace = true }
 
 [[bin]]
 name = "fuzz_create_table"
@@ -67,6 +70,13 @@ doc = false
 [[bin]]
 name = "fuzz_create_database"
 path = "targets/fuzz_create_database.rs"
+test = false
+bench = false
+doc = false
+
+[[bin]]
+name = "unstable_fuzz_create_table_standalone"
+path = "targets/unstable/fuzz_create_table_standalone.rs"
 test = false
 bench = false
 doc = false
